# trip_planner_langgraph

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  RUN_LOCALLY.md  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  run_api.py  run_streamlit.py
src/: __init__.py  main.py  streamlit_app.py
src/agents/: README.md  __init__.py  trip_planner_graph.py  trip_state.py
src/agents/nodes/: __init__.py  ask_clarifying_questions.py  base_node.py  check_missing_info.py  constants.py  extract_requirements.py  generate_day_wise_plan.py  identify_attractions.py  identify_attractions_and_plan.py  optimize_and_format_final_plan.py
src/agents/prompts/: __init__.py  extract_requirements_prompts.py  generate_plan_prompts.py  identify_attractions_and_plan_prompts.py  identify_attractions_prompts.py  optimize_plan_prompts.py
src/agents/utils/: __init__.py  json_parser.py
src/api/: dependencies.py  routes.py
src/core/: config.py  exception_handlers.py  trip_planner_container.py
src/services/: __init__.py  container.py
src/tools/: __init__.py  serper_flight_tool.py
